[package]
name = "loop-queue"
version = "0.1.0"
authors = ["DobromirM <mr.d.marinov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.11", features = ["full"] }
tokio-tungstenite = "0.10.1"
futures = "0.3.4"
futures-util = "0.3.4"
url = "2.1.1"